Adds package manager

--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "np": "^7.6.3",
     "@rails/activestorage": "^7.2",
     "@uppy/core": "^4.1"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
