--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,10 @@
   ],
   "cSpell.words": [
     "Basmanov",
+    "cuid",
     "excid3",
     "jsnext",
+    "Sology",
     "uppy",
     "Veaudry"
   ]
